--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <meta name="description" content="Dynamic Temperature Converter: Convert Celsius, Fahrenheit, Kelvin, and Rankine effortlessly. Accurate and easy-to-use online tool.">
 <meta name="keywords" content="Temperature Converter, Celsius to Fahrenheit, Kelvin to Celsius, Rankine Converter, Online Temperature Tool, Free Temperature Conversion">
 <meta name="author" content="Your Name">
+    <!-- Open Graph Tags (For Social Sharing) -->
+    <meta property="og:title" content="Dynamic Temperature Converter">
+    <meta property="og:description" content="Convert temperatures between Celsius, Fahrenheit, Kelvin, and Rankine. Learn cool facts while converting!">
+    <meta property="og:image" content="URL_to_image.jpg">
+    <meta property="og:url" content="https://manisrikumar.github.io/TEMPERATURE-COVERTOR/">
+
 
 </head>
 <body>
